web-application/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: web-app-mtls
  namespace: web-app
spec:
  mtls:
    mode: STRICT
